--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
 				<div class="titles-wrap">
 					<h1>We're <span>Sciendatrei</span></h1>
 					<h2><span class="txt-rotate"></span></h2>
-					<h2>Welcome to Our website</h2>
 				</div>
 			</div>
 		</section>
@@ -34,7 +33,7 @@
 			<div class="row">
 				<div class="col-lg-10">
 					<div class="sec-title">
-						<h2>Aib</h2>
+						<h2>Secret Picture</h2>
 					</div>
 				</div>
 			</div>
@@ -66,7 +65,7 @@
 											</ul>
 										</div>
 										<h5>Ferry</h5>
-										<p>11th April 2020</p>
+										<p>September 17, 2019</p>
 									</div>
 								</div>
 							</a>
@@ -89,7 +88,7 @@
 											</ul>
 										</div>
 										<h5>Ferry</h5>
-										<p>11th April 2020</p>
+										<p>September 2, 2019</p>
 									</div>
 								</div>
 							</a>
@@ -112,7 +111,7 @@
 											</ul>
 										</div>
 										<h5>Ilham</h5>
-										<p>11th April 2020</p>
+										<p>November 18 2019</p>
 									</div>
 								</div>
 							</a>
@@ -141,54 +140,6 @@
 							</a>
 						</div>
 					</div>
-
-					<div class="col-12 col-sm-6 col-md-6 col-lg-4 design graphic">
-						<div class="work-box">
-							<a href="images/nature_5.png" class="popup-image">
-								<img src="images/nature_5.png" alt="work image 5" class="work-img img-fluid">
-								<div class="work-overlay">
-									<div class="work-caption text-white text-center">
-										<div class="overlay-icon-holder">
-											<ul class="list-inline">
-												<li class="list-inline-item">
-													<div class="overlay-icons">
-														<i class="mdi mdi-link"></i>
-													</div>
-												</li>
-											</ul>
-										</div>
-										<h5>Design, Graphic</h5>
-										<p>11th April 2020</p>
-									</div>
-								</div>
-							</a>
-						</div>
-					</div>
-
-					<div class="col-12 col-sm-6 col-md-6 col-lg-4 mobileapps developement">
-						<div class="work-box">
-							<a href="images/nature_6.png" class="popup-image">
-								<img src="images/nature_6.png" alt="work image 6" class="work-img img-fluid">
-								<div class="work-overlay">
-									<div class="work-caption text-white text-center">
-										<div class="overlay-icon-holder">
-											<ul class="list-inline">
-												<li class="list-inline-item">
-													<div class="overlay-icons">
-														<i class="mdi mdi-link"></i>
-													</div>
-												</li>
-											</ul>
-										</div>
-										<h5>Mobile Apps, Development</h5>
-										<p>11th April 2020</p>
-									</div>
-								</div>
-							</a>
-						</div>
-					</div>
-
-
 				</div>
 			</div>
 		</div>
